añadiendo título y algunos estílos

--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,17 @@ body {
   margin: 0;
   font-size: 2rem;
   display: flex;
+  flex-direction: column;
   flex: 1;
   min-height: 100vh;
   align-items: center;
+  justify-content: center;
+}
+
+.title {
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 10rem;
 }
 
 .clock {
@@ -54,9 +62,6 @@ body {
   right: 150px;
 }
 
-.min-hand {
-  
-}
 
 .second-hand {
   background-color: red;
